--- a/cesi_manger/package.json
+++ b/cesi_manger/package.json
@@ -11,9 +11,9 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "bootstrap": "^5.0.2",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
-    "vue-carousel-3d": "^1.0.1",
     "vue-router": "^3.2.0",
     "vuetify": "^2.5.5",
     "vuex": "^3.4.0"
