images + QR code + menu
- Déplacement des images dans un fichier dédié
- Ajout d'un QR code parrainage et champs pour utilisation dans /Profil
- Ajout de menu pour 6 restaurant (temporairement sur /Home)

--- a/cesi_manger/package.json
+++ b/cesi_manger/package.json
@@ -10,11 +10,15 @@
     "commit": "cz"
   },
   "dependencies": {
+    "@chenfengyuan/vue-qrcode": "^1.0.2",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11",
+    "qrcode": "^1.4.4",
+    "qrcode.vue": "^1.7.0",
+    "vue": "^2.6.14",
     "vue-carousel-3d": "^1.0.1",
+    "vue-qart": "^2.2.0",
     "vue-router": "^3.2.0",
     "vuetify": "^2.5.5",
     "vuex": "^3.4.0"
