--- a/cesi_manger/package.json
+++ b/cesi_manger/package.json
@@ -20,6 +20,7 @@
     "toastify": "^2.0.1",
     "vue": "^2.6.14",
     "vue-carousel-3d": "^1.0.1",
+    "vue-ccard": "^1.0.6",
     "vue-notification": "^1.3.20",
     "vue-qart": "^2.2.0",
     "vue-router": "^3.2.0",
