--- a/cesi_manger/package.json
+++ b/cesi_manger/package.json
@@ -28,6 +28,7 @@
     "vue-notification": "^1.3.20",
     "vue-qart": "^2.2.0",
     "vue-router": "^3.2.0",
+    "vue-splash": "^1.2.1",
     "vuetify": "^2.5.5",
     "vuex": "^3.4.0"
   },
