--- a/cesi_manger/package.json
+++ b/cesi_manger/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@chenfengyuan/vue-qrcode": "^1.0.2",
     "@fortawesome/fontawesome-free": "^5.15.3",
+    "@vue/composition-api": "^1.0.0-rc.12",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
+    "composition-api": "0.0.0",
     "core-js": "^3.6.5",
     "html2pdf.js": "^0.9.3",
     "mosha-vue-toastify": "^1.0.13",
