--- a/cesi_manger/package.json
+++ b/cesi_manger/package.json
@@ -32,7 +32,8 @@
     "vue-router": "^3.2.0",
     "vue-splash": "^1.2.1",
     "vuetify": "^2.5.5",
-    "vuex": "^3.4.0"
+    "vuex": "^3.6.2",
+    "vuex-persistedstate": "^4.0.0-beta.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
